# polytreewm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  atoms.c  atoms.h  config.def.h  config.mk  configure  datastruct.c  datastruct.h  datetime.c  datetime.h  dwm.c  dwm.desktop  helpers.c  helpers.h  layouts.c  layouts.h  polytreewm.1  polytreewm.desktop  settings.c  settings.h  spawn.c  status.c  status.h  tags.c  tags.h
config/: 2-conditionals-bsd.mk  2-conditionals-gnu.mk  2-defvars-gnu.mk  3-defvars.mk  4-defvars-bsd.mk  4-defvars-gnu.mk  default.mk  freebsd.mk  openbsd.mk
dwm/: handlers.c  handlers.h  layouts.c  layouts.h  swallow.c  swallow.h  systray.c  systray.h
rust-polytreewm/: Cargo.toml
rust-polytreewm/src/: atoms.rs  geom.rs  lib.rs  spawn.rs  xbase.rs
rust-polytreewm/src/api/: atoms.rs  mod.rs  spawn.rs  xbase.rs
rust-winproto/: Cargo.toml
rust-winproto/src/: lib.rs
services/: datetime.c  status.c
src/: api.rs  atoms.c  atoms.h  config.def.h  constraints.c  constraints.h  constraints.rs  drw.c  drw.h  dwm.c  dwm.h  geom.c  geom.h  geom.rs  helpers.c  layouts.c  layouts.h  lib.rs  logger.c  logger.h  main.c  main.h  menu.c  menu.h  settings.c  settings.h  settings.rs  spawn.c  spawn.h  state.c  state.h  unit.c  unit.h  unit.rs  util.c  util.h  xbase.c  xbase.h
src/api/: constraints.rs  geom.rs  mod.rs  settings.rs
src/config/: buttons.c  buttons.h  common.h  cursors.c  cursors.h  keys.c  keys.h  layouts.c  layouts.h
src/dwm/: bar.c  bar.h  layouts.c  (+10 more)
tests/: geom_basic_geom.c  geom_position.c  geom_sizes.c  geom_win_geom.c  main.c
(+10 files in other folders)
