[package]
name = "polytreewm"
version = "0.0.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2021"
description = "PolytreeWM is an extremely fast, small, and dynamic tiling window manager for X"
readme = true
homepage = "https://github.com/PolytreeDE/polytreewm"
repository = "https://github.com/PolytreeDE/polytreewm.git"
license = "MIT"
keywords = []
categories = []
publish = false

[lib]
name = "polytreewm"
crate-type = ["staticlib"]
