[package]
name = "polytreewm"
version = "0.0.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2021"
description = "PolytreeWM is an extremely fast, small, and dynamic tiling window manager for X"
readme = true
homepage = "https://github.com/PolytreeDE/polytreewm"
repository = "https://github.com/PolytreeDE/polytreewm.git"
license = "MIT"
keywords = []
categories = []
publish = false

[lib]
name = "polytreewm"
crate-type = ["staticlib"]

[dependencies]
ctor = "0.1.23"
env_logger = "0.9.0"
log = "0.4.17"
x11 = "2.20.0"
